# StrongholdTriangulator

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  runReleaseBuild.bat
Scripts/: build.bat  run.bat
Scripts/utils/: colors.bat
Theme/: colors.cpp  colors.h  style.cpp  style.h
Theme/Font/: JETBRAINSMONONL-BOLD.h
src/: App.cpp  App.h  main.cpp
src/GUI/: GUI.cpp  GUI.h  TitleBar.cpp  renderBody.cpp
src/core/: Constants.h  Solver.cpp  Solver.h
